fix(view): now alignment should be done

--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -313,8 +313,8 @@ table {
     width: 100%;
   }
   .cards-adaption {
-    margin-left: -1rem;
-    margin-right: -1rem;
+    margin-left: -0.5rem;
+    margin-right: -0.5rem;
     .m-x-1 {
       margin-left: 1rem !important;
       margin-right: 1rem !important;
